--- a/sass/modules/_grid6.scss
+++ b/sass/modules/_grid6.scss
@@ -8,8 +8,8 @@
     min-height: 1px;
     width: 16.666%;
     padding: 1px;
-    //background-color: #FFDCDC;
-    //border: 1px solid lightgreen;
+    background-color: #FFDCDC;
+    border: 1px solid lightgreen;
     display: flex;
     height: 100%;
 }
