--- a/sass/modules/_mediaQuery.scss
+++ b/sass/modules/_mediaQuery.scss
@@ -1,5 +1,4 @@
-$phone: "(max-width: 479px)";
-$tablet: "(min-width: 480px) and (max-width: 1023px)";
-$desktop: "(min-width: 1024px)";
-
-
+@import 'mediaQuery/phoneS';
+@import 'mediaQuery/phoneM';
+@import 'mediaQuery/tablet';
+@import 'mediaQuery/desktop';
